Added win/lost states, score, and lives

--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
   gameContainer = {
       env : 'dev',
       gameVersion : '0.0.2',
-      scene : 'main'
+      scene : 'level1'
   },
   sc    = [], // container for backbone scene elements
   infc  = []  // container for backbone interface elements
