--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
 <!-- Consider adding a manifest.appcache: h5bp.com/d/Offline -->
 <!--[if gt IE 8]><!--> <html class="no-js" lang="en"> <!--<![endif]-->
 <head>
+  <title>Number Muncher</title>
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
   <title></title>
@@ -46,7 +47,7 @@
   <script type="text/javascript">
   gameContainer = {
       env : 'dev',
-      gameVersion : '0.0.3',
+      gameVersion : '0.0.4',
       scene : 'level1'
   },
   sc    = [], // container for backbone scene elements
